# auth-service

./: pyproject.toml
src/auth_service/: __init__.py
